[project]
name = "snow-globe"
version = "0.1.0"
description = "Snowflake state and DDL manager CLI"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { file = "LICENSE" }
authors = [
    { name = "Jaryd Thornton", email = "jaryd90@gmail.com" }
]
dependencies = [
    "cryptography==45.0.5",
    "Jinja2==3.1.6",
    "pandas==2.3.1",
    "pydantic==2.11.7",
    "PyYAML==6.0.2",
    "rich==14.0.0",
    "sqlglot==27.1.0",
    "typer==0.16.0",
    "typing_extensions==4.14.1"
]

[project.scripts]
snow-globe = "snow_globe:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
snow_globe = ["examples/profiles.yml","examples/config.yml"]

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"
